--- a/AdCenter2/app/views/inicio.html
+++ b/AdCenter2/app/views/inicio.html
@@ -1,7 +1,7 @@
 
   
 {% extends "base_sistema.html" %}
-{% block subtitulo %} Usuarios {% endblock%}
+{% block subtitulo %} AdCenter {% endblock%}
 {% block conteudo %}
 <section class="content">
   <div class="row">
