--- a/AdCenter2/app/views/anuncio.html
+++ b/AdCenter2/app/views/anuncio.html
@@ -1,13 +1,13 @@
 
   
 {% extends "base_sistema.html" %}
-{% block subtitulo %} Usuarios {% endblock%}
+{% block subtitulo %} AdCenter Anuncios {% endblock%}
 {% block conteudo %}
 <section class="content">
   <div class="row">
     <div class="col-xs-12">
       <div class="box-header">
-        <h3 class="box-title">Cadastro de financeiro</h3>
+        <h3 class="box-title">Cadastro de produtos</h3>
       </div><!-- /.box-header -->
       <div class="box">
         <div class="car">
@@ -26,8 +26,8 @@
               <thead>
                   <tr>
                     <th scope="col">Id</th>
-                    <th scope="col">Banco</th>
-                    <th scope="col">Agencia</th>
+                    <th scope="col">Quantidade</th>
+                    <th scope="col">Tipo</th>
                     <th scope="col">Data</th>
                     <th scope="col">Alterar</th>                     
                     <th scope="col">Excluir</th>
@@ -35,18 +35,18 @@
               </thead>
               <tbody>
                   <tr>
-                    <td><a href="{{url_for('usuario')}}">1</a></td>
-                    <td>Nubank</td>
-                    <td>007</td>
+                    <td><a href="{{url_for('anuncio')}}">1</a></td>
+                    <td>10</td>
+                    <td>Sabonete</td>
                     <td>14-04-2034</td>
-                    <td><a href="{{url_for('atualiza_finan')}}"><span class="label label-success"><i class="fa-solid fa-pencil"></i> Alterar</span></a></td>
-                    <td><a href="{{url_for('usuario')}}"><span class="label label-danger"><i class="fa-solid fa-eraser"></i> Excluir</span></a></td>
+                    <td><a href="{{url_for('atualiza_anuncio')}}"><span class="label label-success"><i class="fa-solid fa-pencil"></i> Alterar</span></a></td>
+                    <td><a href="{{url_for('anuncio')}}"><span class="label label-danger"><i class="fa-solid fa-eraser"></i> Excluir</span></a></td>
                   </tr>
                
                            
               </tbody>
           </table>
-          <a href="{{url_for('cad_finan')}}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Inserir finanças</a>
+          <a href="{{url_for('cad_anuncio')}}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Inserir anuncios</a>
        </div>      
     </div>        
   </div>
