--- a/AdCenter2/app/views/atualiza_admin.html
+++ b/AdCenter2/app/views/atualiza_admin.html
@@ -1,5 +1,5 @@
 {% extends "base_sistema.html" %}
-{% block subtitulo %} Usuarios {% endblock%}
+{% block subtitulo %} AdCenter Administradores {% endblock%}
     {% block conteudo %}
     <section class="content">
       <div class="row">
@@ -8,17 +8,21 @@
           <!-- general form elements -->
           <div class="box box-primary">
             <div class="box-header with-border">
-              <h3 class="box-title">Cadastro financeiro</h3>
+              <h3 class="box-title">Cadastro de Administradores</h3>
             </div><!-- /.box-header -->
             <!-- form start -->
             <form class="row g-3" action="" method="POST" name="dados_user" onSubmit="return enviardados_user();">
               <div class="box-body">               
                 <div class="col-md-4">
-                  <label class="form-label">Banco</label>
+                  <label class="form-label">Nome</label>
                   <input class="form-control" type="text" name="nome" id="nome" value="Nubankm">
                 </div>
                 <div class="col-md-4">
-                  <label class="form-label" >Agencia</label>
+                  <label class="form-label">Documento</label>
+                  <input class="form-control" type="number" name="document" id="document" value="44715264987">
+                </div>
+                <div class="col-md-4">
+                  <label class="form-label" >Email</label>
                   <input class="form-control" type="email" name="email" value="caraca@caraca.com">
                 </div>
                 
