--- a/AdCenter2/app/views/cad_admin.html
+++ b/AdCenter2/app/views/cad_admin.html
@@ -1,5 +1,5 @@
 {% extends "base_sistema.html" %}
-{% block subtitulo %} Usuarios {% endblock%}
+{% block subtitulo %} AdCenter Administradores{% endblock%}
     {% block conteudo %}
     <section class="content">
       <div class="row">
@@ -8,10 +8,10 @@
           <!-- general form elements -->
           <div class="box box-primary">
             <div class="box-header with-border">
-              <h3 class="box-title">Cadastro de produtos</h3>
+              <h3 class="box-title">Cadastro Administradores</h3>
             </div><!-- /.box-header -->
             <!-- form start -->
-            <form class="row g-3" action="{{url_for('cad_prod')}}" method="POST" name="dados_user" onSubmit="return enviardados_user();">
+            <form class="row g-3" action="{{url_for('cad_admin')}}" method="POST" name="dados_user" onSubmit="return enviardados_user();">
               <div class="box-body">
                
               <div class="col-md-10">
@@ -28,12 +28,16 @@
               
               
               <div class="col-md-4">
-                <label class="form-label">Produto</label>
+                <label class="form-label">Nome</label>
                 <input class="form-control" type="text" name="nome" id="nome">
               </div>
               <div class="col-md-4">
-                <label class="form-label" >Tipo</label>
-                <input class="form-control" type="email" name="email">
+                <label class="form-label">Documento</label>
+                <input class="form-control" type="text" name="documento" id="documento">
+              </div>
+              <div class="col-md-4">
+                <label class="form-label" >Email</label>
+                <input class="form-control" type="text" name="email">
               </div>
                 
               <div class="col-md-12">
