--- a/AdCenter2/app/views/cad_anuncio.html
+++ b/AdCenter2/app/views/cad_anuncio.html
@@ -1,5 +1,5 @@
 {% extends "base_sistema.html" %}
-{% block subtitulo %} Usuarios {% endblock%}
+{% block subtitulo %} AdCenter Anuncios {% endblock%}
     {% block conteudo %}
     <section class="content">
       <div class="row">
@@ -8,10 +8,10 @@
           <!-- general form elements -->
           <div class="box box-primary">
             <div class="box-header with-border">
-              <h3 class="box-title">Cadastro financeiro </h3>
+              <h3 class="box-title">Cadastro de Anuncios</h3>
             </div><!-- /.box-header -->
             <!-- form start -->
-            <form class="row g-3" action="{{url_for('cad_user')}}" method="POST" name="dados_user" onSubmit="return enviardados_user();">
+            <form class="row g-3" action="{{url_for('cad_anuncio')}}" method="POST" name="dados_user" onSubmit="return enviardados_user();">
               <div class="box-body">
                
               <div class="col-md-10">
@@ -28,12 +28,20 @@
               
               
               <div class="col-md-4">
-                <label class="form-label">Banco</label>
+                <label class="form-label">Titulo</label>
                 <input class="form-control" type="text" name="nome" id="nome">
               </div>
               <div class="col-md-4">
-                <label class="form-label" >Agencia</label>
-                <input class="form-control" type="text" name="email">
+                <label class="form-label" >Descricao</label>
+                <input class="form-control" type="text" name="descricao">
+              </div>
+              <div class="col-md-4">
+                <label class="form-label" >Categoria</label>
+                <input class="form-control" type="text" name="categoria">
+              </div>
+              <div class="col-md-4">
+                <label class="form-label" >Link</label>
+                <input class="form-control" type="text" name="link">
               </div>
                 
               <div class="col-md-12">
