--- a/AdCenter2/app/views/cad_user.html
+++ b/AdCenter2/app/views/cad_user.html
@@ -1,5 +1,5 @@
 {% extends "base_sistema.html" %}
-{% block subtitulo %} Usuarios {% endblock%}
+{% block subtitulo %} AdCenter Usuarios {% endblock%}
     {% block conteudo %}
     <section class="content">
       <div class="row">
