--- a/AdCenter2/app/views/usuario.html
+++ b/AdCenter2/app/views/usuario.html
@@ -1,5 +1,5 @@
 {% extends "base_sistema.html" %}
-{% block subtitulo %} Usuario {% endblock%}
+{% block subtitulo %} AdCenter Usuarios {% endblock%}
 {% block conteudo %}
 <section class="content">
   <div class="row">
