--- a/AdCenter2/app/views/anuncio.html
+++ b/AdCenter2/app/views/anuncio.html
@@ -1,55 +1,51 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
 
+    <link href="Css\Inicio.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- Meta tags Obrigatórias -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    <title>Olá, mundo!</title>
+
+    <header class="p-5 border-bottom" style="background-color: #3c9ace;">
+      <div class="container">
+        <div class="d-flex position-absolute top-10 start-50 translate-middle ">
+
+          <h1 style="font-family:\public\assets\Fonts\Nexa-Heavy; font-weight: bolder;">AdCenter</h1>
+
+          <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
+            <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
+          </a>
+
+          <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+            <input type="search" class="form-control" placeholder="Club Penguin Pelucia..." aria-label="Search">
+          </form>
   
-{% extends "base_sistema.html" %}
-{% block subtitulo %} AdCenter Anuncios {% endblock%}
-{% block conteudo %}
-<section class="content">
-  <div class="row">
-    <div class="col-xs-12">
-      <div class="box-header">
-        <h3 class="box-title">Cadastro de produtos</h3>
-      </div><!-- /.box-header -->
-      <div class="box">
-        <div class="car">
-          {% with messages = get_flashed_messages()%}
-            {% if messages %}
-                {% for message in messages %}
-                <div class="alert alert-success">
-                  {{message}}                                          
-                </div>                                 
-                {% endfor %}
-             {% endif %}
-          {% endwith %}
-        </div>      
-          <div class="box-body">
-            <table id="example" class="display" style="width:100%">
-              <thead>
-                  <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Quantidade</th>
-                    <th scope="col">Tipo</th>
-                    <th scope="col">Data</th>
-                    <th scope="col">Alterar</th>                     
-                    <th scope="col">Excluir</th>
-                  </tr>
-              </thead>
-              <tbody>
-                  <tr>
-                    <td><a href="{{url_for('anuncio')}}">1</a></td>
-                    <td>10</td>
-                    <td>Sabonete</td>
-                    <td>14-04-2034</td>
-                    <td><a href="{{url_for('atualiza_anuncio')}}"><span class="label label-success"><i class="fa-solid fa-pencil"></i> Alterar</span></a></td>
-                    <td><a href="{{url_for('anuncio')}}"><span class="label label-danger"><i class="fa-solid fa-eraser"></i> Excluir</span></a></td>
-                  </tr>
-               
-                           
-              </tbody>
-          </table>
-          <a href="{{url_for('cad_anuncio')}}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Inserir anuncios</a>
-       </div>      
-    </div>        
-  </div>
-</section>
-{% endblock %}
-     
+          <div class="p-1 dropdown text-end">
+            <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
+              <img src="https://pbs.twimg.com/media/FNAx4pYXIAUkZo3.jpg:large" alt="mdo" width="32" height="32" class="rounded-circle">
+            </a>
+            <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
+              <li><a class="dropdown-item" href="#">Meus itens</a></li>
+              <li><a class="dropdown-item" href="#">Configuracoes</a></li>
+              <li><a class="dropdown-item" href="#">Minha Conta</a></li>
+              <li><a class="dropdown-item" href="#">Anuncios</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Sair</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
+  </head>
+
+  <body>
+
+    
+
+  </body>
+
+</html>
