--- a/AdCenter2/app/views/Css/Inicio.css
+++ b/AdCenter2/app/views/Css/Inicio.css
@@ -1,5 +1,55 @@
+p {
+    margin: 0;
+    padding: 0;
+}
+
 .outline {
     color: white;
     background-color: white;
     text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+.AjusteCentral{
+    display: flex;
+    margin-top: 50px;
+    border: solid;
+    padding: 2rem;
+    width: 80%;
+    justify-content: space-evenly;
+}
+
+.qtdeProd {
+    font-size: 30px;
+    font-weight: bolder;
+    color: red;
+}
+
+.imagem{
+    margin-top: 12px;
+}
+
+.imagem img{
+    max-width: 12rem;
+    max-height: 3rem;
+}
+
+.aPartirDe,
+.produtosEncontrados{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.titulo{
+    font-weight: bolder;
+}
+
+.valorProduto{font-size: 30px;
+    font-weight: bolder;
+    color: green;}
+
+.resultadoProdutos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
