--- a/AdCenter2/app/views/anuncio.html
+++ b/AdCenter2/app/views/anuncio.html
@@ -8,7 +8,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    <title>Olá, mundo!</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    <title>AdCenter</title>
 
     <header class="p-5 border-bottom" style="background-color: #3c9ace;">
       <div class="container">
@@ -44,7 +44,79 @@
 
   <body>
 
-    
+    <p>  </p>
+
+    <div class="resultadoProdutos">
+      <div class="AjusteCentral">
+        <div class="imagem">
+          <img src="https://http2.mlstatic.com/frontend-assets/ml-web-navigation/ui-navigation/6.6.31/mercadolibre/logo-pt__large_25years.png" alt="">
+        </div>
+        <div class="produtosEncontrados">
+          <span class="titulo"> PRODUTOS ENCONTRADOS </span>
+          <span class="qtdeProd"> 65 </span>
+        </div>
+        <div class="aPartirDe">
+          <span class="titulo"> A PARTIR DE </span>
+          <span class="valorProduto"> R$100,90</span>
+        </div>
+      </div>
+
+      <div class="AjusteCentral">
+        <div class="imagem">
+          <img src="https://http2.mlstatic.com/frontend-assets/ml-web-navigation/ui-navigation/6.6.31/mercadolibre/logo-pt__large_25years.png" alt="">
+        </div>
+        <div class="produtosEncontrados">
+          <span class="titulo"> PRODUTOS ENCONTRADOS </span>
+          <span class="qtdeProd"> 65 </span>
+        </div>
+        <div class="aPartirDe">
+          <span class="titulo"> A PARTIR DE </span>
+          <span class="valorProduto"> R$100,90</span>
+        </div>
+      </div>
+
+      <div class="AjusteCentral">
+        <div class="imagem">
+          <img src="https://http2.mlstatic.com/frontend-assets/ml-web-navigation/ui-navigation/6.6.31/mercadolibre/logo-pt__large_25years.png" alt="">
+        </div>
+        <div class="produtosEncontrados">
+          <span class="titulo"> PRODUTOS ENCONTRADOS </span>
+          <span class="qtdeProd"> 65 </span>
+        </div>
+        <div class="aPartirDe">
+          <span class="titulo"> A PARTIR DE </span>
+          <span class="valorProduto"> R$100,90</span>
+        </div>
+      </div>
+
+      <div class="AjusteCentral">
+        <div class="imagem">
+          <img src="https://http2.mlstatic.com/frontend-assets/ml-web-navigation/ui-navigation/6.6.31/mercadolibre/logo-pt__large_25years.png" alt="">
+        </div>
+        <div class="produtosEncontrados">
+          <span class="titulo"> PRODUTOS ENCONTRADOS </span>
+          <span class="qtdeProd"> 65 </span>
+        </div>
+        <div class="aPartirDe">
+          <span class="titulo"> A PARTIR DE </span>
+          <span class="valorProduto"> R$100,90</span>
+        </div>
+      </div>
+
+      <div class="AjusteCentral">
+        <div class="imagem">
+          <img src="https://http2.mlstatic.com/frontend-assets/ml-web-navigation/ui-navigation/6.6.31/mercadolibre/logo-pt__large_25years.png" alt="">
+        </div>
+        <div class="produtosEncontrados">
+          <span class="titulo"> PRODUTOS ENCONTRADOS </span>
+          <span class="qtdeProd"> 65 </span>
+        </div>
+        <div class="aPartirDe">
+          <span class="titulo"> A PARTIR DE </span>
+          <span class="valorProduto"> R$100,90</span>
+        </div>
+      </div>
+    </div>
 
   </body>
 
