--- a/AdCenter2/app/views/anuncio.html
+++ b/AdCenter2/app/views/anuncio.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="d-flex position-absolute top-10 start-50 translate-middle ">
 
-          <h1 style="font-family:\public\assets\Fonts\Nexa-Heavy; font-weight: bolder;">AdCenter</h1>
+          <h1 style="font-family: 'Roboto', sans-serif; font-weight: bolder;">AdCenter</h1>
 
           <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
             <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
