--- a/AdCenter2/app/views/base_sistema.html
+++ b/AdCenter2/app/views/base_sistema.html
@@ -71,7 +71,7 @@
           <ul>
             <li><a href="#" id="scroll">Cadastre-se</a></li>
             <li><a href="#">Login</a></li>
-            <li><a href="#fale-conosco" id="scroll">Fale conosco</a></li>
+            <li><a href="#fale-conosco">notificações</a></li>
           </ul>
         </nav>
       </div>
@@ -86,27 +86,27 @@
       <section class="main-protudcts-container">
         <div class="main-card">
           <div class="product-image" id="img-1"></div>
-          <h3>PS5 MÍDIA FÍSICA 1</h3>
+          <h3 class="m1">PS5 MÍDIA FÍSICA 1</h3>
           <p>A patir de R$ <span class="main-bold">3.729,00</span></p>
-          <a href="https://lista.mercadolivre.com.br/console-playstation-5-midia-fisica" class="main-btn">buscar</a>
+          <a href="https://lista.mercadolivre.com.br/console-playstation-5-midia-fisica" class="main-btn1">buscar</a>
         </div>
         <div class="main-card">
           <div class="product-image" id="img-2"></div>
-          <h3>RÁDIO PARA CARRO JBL</h3>
+          <h3 class="m1">RÁDIO PARA CARRO JBL</h3>
           <p>A patir de R$ <span class="main-bold">262,90</span></p>
-          <a href="https://lista.mercadolivre.com.br/radio-automotivo-jbl?skipInApp=true&matt_tool=34955704&matt_word=Default_URL_MLB&matt_source=google&matt_campaign_id=10771947278&matt_ad_group_id=110175121350&matt_match_type=&matt_network=g&matt_device=c&matt_creative=465295565641&matt_keyword=&matt_ad_position=&matt_ad_type=&matt_merchant_id=&matt_product_id=&matt_product_partition_id=&matt_target_id=aud-1966489759667:dsa-394624151036&cq_src=google_ads&cq_cmp=10771947278&cq_net=g&cq_plt=gp&cq_med=&gad_source=1&gclid=CjwKCAjw_LOwBhBFEiwAmSEQAby2YL4eQrVyNAz12GfjWDaUGkbX8tVj6Hjd8WBLWOgYNlGOAvbrwRoC0GAQAvD_BwE" class="main-btn">buscar</a>
+          <a href="https://lista.mercadolivre.com.br/radio-automotivo-jbl?skipInApp=true&matt_tool=34955704&matt_word=Default_URL_MLB&matt_source=google&matt_campaign_id=10771947278&matt_ad_group_id=110175121350&matt_match_type=&matt_network=g&matt_device=c&matt_creative=465295565641&matt_keyword=&matt_ad_position=&matt_ad_type=&matt_merchant_id=&matt_product_id=&matt_product_partition_id=&matt_target_id=aud-1966489759667:dsa-394624151036&cq_src=google_ads&cq_cmp=10771947278&cq_net=g&cq_plt=gp&cq_med=&gad_source=1&gclid=CjwKCAjw_LOwBhBFEiwAmSEQAby2YL4eQrVyNAz12GfjWDaUGkbX8tVj6Hjd8WBLWOgYNlGOAvbrwRoC0GAQAvD_BwE" class="main-btn1">buscar</a>
         </div>
         <div class="main-card">
           <div class="product-image" id="img-3"></div>
-          <h3>TÊNIS NIKE AIRFORCE</h3>
+          <h3 class="m1">TÊNIS NIKE AIRFORCE</h3>
           <p>A patir de R$ <span class="main-bold">86,90</span></p>
-          <a href="https://lista.mercadolivre.com.br/tenis-nike-airforce" class="main-btn">buscar</a>
+          <a href="https://lista.mercadolivre.com.br/tenis-nike-airforce" class="main-btn1">buscar</a>
         </div>
         <div class="main-card">
           <div class="product-image" id="img-4"></div>
-          <h3>NOTEBOOK GAMER</h3>
+          <h3 class="m1">NOTEBOOK GAMER</h3>
           <p>A patir de R$ <span class="main-bold">3.783,00</span></p>
-          <a href="https://lista.mercadolivre.com.br/notebook-gamer" class="main-btn">buscar</a>
+          <a href="https://lista.mercadolivre.com.br/notebook-gamer" class="main-btn1">buscar</a>
         </div>
       </section>
     </div>
@@ -116,27 +116,27 @@
       <section class="main-protudcts-container">
         <div class="main-card">
           <div class="product-image" id="img-5"></div>
-          <h3>Sneaker 5</h3>
-          <p>R$ <span class="main-bold">129,99</span></p>
-          <a href="" class="main-btn">buscar</a>
+          <h3 class="o2">VIOLÃO TAYLOR 210e</h3>
+          <p>A partir de R$ <span class="main-bold">4.000,00</span></p>
+          <a href="https://www.olx.com.br/anuncios/violao-taylor-e" class="main-btn2">buscar</a>
         </div>
         <div class="main-card">
           <div class="product-image" id="img-6"></div>
-          <h3>Sneaker 6</h3>
-          <p>R$ <span class="main-bold">129,99</span></p>
-          <a href="" class="main-btn">buscar</a>
+          <h3 class="o2">SOFA EM LINHO 160x100</h3>
+          <p>A partir de R$ <span class="main-bold">500,00</span></p>
+          <a href="https://www.olx.com.br/estado-sp?q=sofa" class="main-btn2">buscar</a>
         </div>
         <div class="main-card">
           <div class="product-image" id="img-7"></div>
-          <h3>Sneaker 7</h3>
-          <p>R$ <span class="main-bold">129,99</span></p>
-          <a href="" class="main-btn">buscar</a>
+          <h3 class="o2">PNEU ARO 14 PIRELLI 4UN</h3>
+          <p>A parir de R$ <span class="main-bold">1.032,00</span></p>
+          <a href="https://www.olx.com.br/estado-sp?q=pneu%20aro%2014" class="main-btn2">buscar</a>
         </div>
         <div class="main-card">
           <div class="product-image" id="img-8"></div>
-          <h3>Sneaker 8</h3>
-          <p>R$ <span class="main-bold">129,99</span></p>
-          <a href="" class="main-btn">buscar</a>
+          <h3 class="o2">CONTROLE DE PS5</h3>
+          <p>A partir de R$ <span class="main-bold">480,00</span></p>
+          <a href="https://ma.olx.com.br/regiao-de-sao-luis/videogames/controle-de-ps5-dualsense-sem-fio-c-garantia-lojas-wiki-1162314964?rec=u&lis=vi_not_found_web%7C16060%7Cvi_not_found_web%7C0" class="main-btn2">buscar</a>
         </div>
       </section>
     </div>
@@ -146,27 +146,27 @@
       <section class="main-protudcts-container">
         <div class="main-card">
           <div class="product-image" id="img-9"></div>
-          <h3>Sneaker 9</h3>
-          <p>R$ <span class="main-bold">129,99</span></p>
-          <a href="" class="main-btn">buscar</a>
+          <h3 class="f3">CAMA BOX QUEEN</h3>
+          <p>A partir de R$ <span class="main-bold">1.200,00</span></p>
+          <a href="https://www.facebook.com/marketplace/category/queen-bed-frames/?locale=pt_BR" class="main-btn3">buscar</a>
         </div>
         <div class="main-card">
           <div class="product-image" id="img-10"></div>
-          <h3>Sneaker 10</h3>
-          <p>R$ <span class="main-bold">129,99</span></p>
-          <a href="" class="main-btn">buscar</a>
+          <h3 class="f3">RELOGIO GSHOCK</h3>
+          <p>A partir de R$ <span class="main-bold">90,00</span></p>
+          <a href="https://www.facebook.com/marketplace/campinas/search?query=gshock" class="main-btn3">buscar</a>
         </div>
         <div class="main-card">
           <div class="product-image" id="img-11"></div>
-          <h3>Sneaker 11</h3>
-          <p>R$ <span class="main-bold">129,99</span></p>
-          <a href="" class="main-btn">buscar</a>
+          <h3 class="f3">CELULAR IPHONE</h3>
+          <p>A partir de R$ <span class="main-bold">900,00</span></p>
+          <a href="https://www.facebook.com/marketplace/campinas/search?query=iphone" class="main-btn3">buscar</a>
         </div>
         <div class="main-card">
           <div class="product-image" id="img-12"></div>
-          <h3>Sneaker 12</h3>
-          <p>R$ <span class="main-bold">129,99</span></p>
-          <a href="" class="main-btn">buscar</a>
+          <h3 class="f3">MONITOR GAMER 240HZ</h3>
+          <p>A partir de R$ <span class="main-bold">900,00</span></p>
+          <a href="https://www.facebook.com/marketplace/campinas/search/?query=%20240hz" class="main-btn3">buscar</a>
         </div>
       </section>
     </div>
