--- a/AdCenter2/app/views/Css/base-sistema.css
+++ b/AdCenter2/app/views/Css/base-sistema.css
@@ -61,7 +61,7 @@ nav {
 }
 
 .product-image {
-    height: 100px;
+    height: 110px;
     width: 100%;
     margin-bottom: 10px;
     background-position: center;
@@ -97,41 +97,54 @@ nav {
 }
 
 #img-5 {
-    background-image: url('../img/tenis5.jpg');
+    background-image: url('../img/violão.jpg');
 }
 
 #img-6 {
-    background-image: url('../img/tenis6.jpg');
+    background-image: url('../img/sofá.jpg');
 }
 
 #img-7 {
-    background-image: url('../img/tenis6.jpg');
+    background-image: url('../img/pneu.jpg');
 }
 
 #img-8 {
-    background-image: url('../img/tenis6.jpg');
+    background-image: url('../img/controle.jpg');
 }
 
 #img-9 {
-    background-image: url('../img/tenis6.jpg');
+    background-image: url('../img/cama.jpg');
 }
 
 #img-10 {
-    background-image: url('../img/tenis6.jpg');
+    background-image: url('../img/relogio.jpg');
 }
 
 #img-11 {
-    background-image: url('../img/tenis6.jpg');
+    background-image: url('../img/celular.jpg');
 }
 
 #img-12 {
-    background-image: url('../img/tenis6.jpg');
+    background-image: url('../img/monitor.jpg');
 }
 
-h3 {
+.m1 {
     margin-bottom: 10px;
-    color: #00aeef;
-    border-left: 5px solid #3c9ace;
+    border-left: 5px solid #FFE600;
+    padding-left: 7px;
+    font-size: 24px;
+}
+
+.o2 {
+    margin-bottom: 10px;
+    border-left: 5px solid #85C446;
+    padding-left: 7px;
+    font-size: 24px;
+}
+
+.f3 {
+    margin-bottom: 10px;
+    border-left: 5px solid #1877F2;
     padding-left: 7px;
     font-size: 24px;
 }
@@ -144,21 +157,55 @@ h3 {
     font-weight: bold;
 }
 
-.main-btn {
+.main-btn1 {
     display: block;
     width: 100%;
     text-align: center;
     text-transform: uppercase;
     text-decoration: none;
-    background-color: #00aeef;
+    background-color: #FFE600;
     color: #fff;
     padding: 5px;
     border-radius: 5px;
     transition: .5s;
 }
 
-.main-btn:hover {
-    background-color: #3c9ace;
+.main-btn1:hover {
+    background-color: #b4a200;
+}
+
+.main-btn2 {
+    display: block;
+    width: 100%;
+    text-align: center;
+    text-transform: uppercase;
+    text-decoration: none;
+    background-color: #6441A4;
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    transition: .5s;
+}
+
+.main-btn2:hover {
+    background-color: #FF7900;
+}
+
+.main-btn3 {
+    display: block;
+    width: 100%;
+    text-align: center;
+    text-transform: uppercase;
+    text-decoration: none;
+    background-color: #3b5998;
+    color: #fff;
+    padding: 5px;
+    border-radius: 5px;
+    transition: .5s;
+}
+
+.main-btn3:hover {
+    background-color: #1877F2;
 }
 
 /* Footer */
