--- a/AdCenter2/app/views/base_sistema.html
+++ b/AdCenter2/app/views/base_sistema.html
@@ -69,9 +69,9 @@
 
         <nav class="desktop-menu">
           <ul>
-            <li><a href="#" id="scroll">Cadastre-se</a></li>
-            <li><a href="#">Login</a></li>
-            <li><a href="#fale-conosco">notificações</a></li>
+            <li><a href="../views/cad_user.html">Cadastre-se</a></li>
+            <li><a href="../views/base_login.html">Login</a></li>
+            <li><a href="#fale-conosco">Notificações</a></li>
           </ul>
         </nav>
       </div>
