--- a/AdCenter2/app/views/cad_user.html
+++ b/AdCenter2/app/views/cad_user.html
@@ -1,57 +1,56 @@
-{% extends "base_sistema.html" %}
-{% block subtitulo %} AdCenter Usuarios {% endblock%}
-    {% block conteudo %}
-    <section class="content">
-      <div class="row">
-        <!-- left column -->
-        <div class="col-md-12">
-          <!-- general form elements -->
-          <div class="box box-primary">
-            <div class="box-header with-border">
-              <h3 class="box-title">Cadastro de usuarios</h3>
-            </div><!-- /.box-header -->
-            <!-- form start -->
-            <form class="row g-3" action="{{url_for('cad_user')}}" method="POST" name="dados_user" onSubmit="return enviardados_user();">
-              <div class="box-body">
-               
-              <div class="col-md-10">
-                  {% with messages = get_flashed_messages()%}
-                    {% if messages %}
-                        {% for message in messages %}
-                        <div class="alert alert-success">
-                          {{message}}                                                         
-                        </div>                                 
-                        {% endfor %}
-                     {% endif %}
-                  {% endwith %}
-              </div>
-              
-              
-              <div class="col-md-4">
-                <label class="form-label">*Nome</label>
-                <input class="form-control" type="text" name="nome" id="nome">
-              </div>
-              <div class="col-md-4">
-                <label class="form-label" >E-mail</label>
-                <input class="form-control" type="email" name="email">
-              </div>
-              <div class="col-md-4">
-                <label class="form-label">Senha</label>
-                <input class="form-control"  type="password" name="senha">
-              </div>   
-              <div class="col-md-12">
-                <br>
-              </div>                             
-              <div class="col-md-12">
-                <button class="btn btn-primary" type="submit">Cadastrar</button>
-              </div>
-                       
-            </div>
-            
-            </form>                 
-          </div><!-- /.box -->         
-        </div><!--/.col (left) -->
-        <!-- right column -->        
-      </div>   <!-- /.row -->
-    </section><!-- /.content -->
-    {% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cadastre-se</title>
+    <link rel="stylesheet" href="../views/Css/mstyles.css">
+</head>
+<body>
+    <div class="container">
+        <div class="form">
+            <form action="../views/base_sistema.html">
+                <div class="form-header">
+                    <div class="title">
+                        <h1>Cadastre-se</h1>
+                    </div>
+                    <div class="start-button">
+                        <button><a href="../views/base_sistema.html">Início</a></button>
+                    </div>
+                </div>
+
+                <div class="input-group">
+                    <div class="input-box">
+                        <label for="name">Nome</label>
+                        <input id="name" type="text" name="name" placeholder="Digite seu nome completo" required>
+                    </div>
+
+                    <div class="input-box">
+                        <label for="email">Email</label>
+                        <input id="email" type="email" name="email" placeholder="Digite seu melhor email" required>
+                    </div>
+
+                    <div class="input-box">
+                        <label for="number">CPF</label>
+                        <input id="number" type="tel" name="number" placeholder="xxx.xxx.xxx-xx" required>
+                    </div>
+
+                    <div class="input-box">
+                        <label for="number">Celular</label>
+                        <input id="number" type="tel" name="number" placeholder="(xx) xxxx-xxxx" required>
+                    </div>
+
+                    <div class="input-box">
+                        <label for="password">Senha</label>
+                        <input id="password" type="password" name="password" placeholder="Crie uma senha" required>
+
+                    </div>
+        <div class="submit">      
+        </div>
+    </div>
+    <div class="submit">      
+    <input type="submit" value="Cadastre-se">
+    </div>
+    </form>
+</body>
+</html>
