--- a/AdCenter2/app/views/base_login.html
+++ b/AdCenter2/app/views/base_login.html
@@ -1,3 +1,6 @@
+{% extends "base_sistema.html" %}
+{% block subtitulo %} AdCenter Administradores{% endblock%}
+    {% block conteudo %}
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
@@ -26,6 +29,31 @@
     </head>   
     <body>
         {% block conteudo %}
+        <div class="container">
+            <div class="form">
+                <form action="../views/base_sistema.html">
+                    <div class="form-header">
+                        <div class="title">
+                            <h1>Login</h1>
+                        </div>
+                    </div>
+    
+                    <div class="input-box">
+                        <label for="email">E-Mail</label>
+                        <input id="email" type="email" name="email" placeholder="Digie seu E-Mail" required>
+                    </div>
+    
+                    <div class="input-box">
+                        <label for="password">Senha</label>
+                        <input id="password" type="password" name="password" placeholder="Escreva sua senha" required>
+                    </div>
+    
+                    <div class="submit">
+                        <input type="submit" value="ENTRAR">
+                    </div>
+                </form>
+            </div>
+        </div>
         {% endblock %}
     <script src="{{url_for('static', filename='vendors/@coreui/coreui/js/coreui.bundle.min.js')}}"></script>
     <script src="{{url_for('static', filename='vendors/simplebar/js/simplebar.min.js')}}"></script>
@@ -33,3 +61,4 @@
     </body>
 
 </html>
+{% endblock %}
