--- a/AdCenter2/app/views/base_sistema.html
+++ b/AdCenter2/app/views/base_sistema.html
@@ -63,7 +63,7 @@
             <ul>
               <li><a href="#">Cadastre-se</a></li>
               <li><a href="#">Login</a></li>
-              <li><a href="#">Notificações</a></li>
+              <li><a href="{{url_for('anuncio')}}">Notificações</a></li>
               </ul>
           </nav>
         </div>
