--- a/AdCenter2/app/views/admin.html
+++ b/AdCenter2/app/views/admin.html
@@ -1,11 +1,11 @@
 {% extends "base_sistema.html" %}
-{% block subtitulo %} AdCenter Administradores {% endblock%}
+{% block subtitulo %} Anúncios AdCenter {% endblock%}
 {% block conteudo %}
 <section class="content">
   <div class="row">
     <div class="col-xs-12">
       <div class="box-header">
-        <h3 class="box-title">Página Anúncios</h3>
+        <h3 class="box-title">Cadastro de Administradores</h3>
       </div><!-- /.box-header -->
       <div class="box">
         <div class="car">
@@ -18,31 +18,32 @@
                 {% endfor %}
              {% endif %}
           {% endwith %}
-        </div>
-        <h1>Adicionar Anúncios</h1>   
+        </div>      
           <div class="box-body">
             <table id="example" class="display" style="width:100%">
               <thead>
                   <tr>
                     <th scope="col">Id</th>
-                    <th scope="col">Título</th>
-                    <th scope="col">Preço</th>
-                    <th scope="col">Link</th>
+                    <th scope="col">Nome</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Senha</th>
                     <th scope="col">Data</th>
                     <th scope="col">Alterar</th>                     
                     <th scope="col">Excluir</th>
                   </tr>
               </thead>
               <tbody>
+                {% for users in usuarios %}
                   <tr>
-                    <td><a href="{{url_for('admin')}}">1</a></td>
-                    <td>Pedro Sampaio</td>
-                    <td>0793745282402</td>
-                    <td>pedrosampaio@email.com</td>
-                    <td>14-04-2034</td>
-                    <td><a href="{{url_for('atualiza_admin')}}"><span class="label label-success"><i class="fa-solid fa-pencil"></i> Alterar</span></a></td>
-                    <td><a href="{{url_for('admin')}}"><span class="label label-danger"><i class="fa-solid fa-eraser"></i> Excluir</span></a></td>
+                    <td>{{admins.id}}</td>
+                    <td>{{admins.nome}}</td>
+                    <td>{{admins.email}}</td>
+                    <td>{{admins.senha}}</td>
+                    <td>{{admins.data}}</td>
+                    <td><a href="#"><span class="label label-success"><i class="fa-solid fa-pencil"></i> Alterar</span></a></td>
+                    <td><a href="{{url_for('excluir_admin',id=admin.id)}}"><span class="label label-danger"><i class="fa-solid fa-eraser"></i> Excluir</span></a></td>
                   </tr>
+                {% endfor %}
                
                            
               </tbody>
@@ -53,3 +54,4 @@
   </div>
 </section>
 {% endblock %}
+     
