--- a/AdCenter2/app/views/inicio.html
+++ b/AdCenter2/app/views/inicio.html
@@ -1,13 +1,11 @@
-
-  
 {% extends "base_sistema.html" %}
-{% block subtitulo %} Usuarios {% endblock%}
+{% block subtitulo %} Anúncios AdCenter {% endblock%}
 {% block conteudo %}
 <section class="content">
   <div class="row">
     <div class="col-xs-12">
       <div class="box-header">
-        <h3 class="box-title">Cadastro de usuarios</h3>
+        <h3 class="box-title">Cadastro de Anúncios</h3>
       </div><!-- /.box-header -->
       <div class="box">
         <div class="car">
@@ -26,29 +24,32 @@
               <thead>
                   <tr>
                     <th scope="col">Id</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Nome</th>
+                    <th scope="col">Título</th>
+                    <th scope="col">Preço</th>
+                    <th scope="col">Link</th>
                     <th scope="col">Data</th>
                     <th scope="col">Alterar</th>                     
                     <th scope="col">Excluir</th>
                   </tr>
               </thead>
               <tbody>
-                {% for users in usuarios %}
+                {% for anuncio in anuncios %}
                   <tr>
-                    <td>{{users.id}}</td>
-                    <td>{{users.email}}</td>
-                    <td>{{users.nome}}</td>
-                    <td>{{users.data}}</td>
+                    <td>{{anuncios.id}}</td>
+                    <td>{{anuncios.email}}</td>
+                    <td>{{anuncios.nome}}</td>
+                    <td><img src="/AdCenter2/public/css/img/cama.jpg" alt="Cama"></td>
+                    <td>{{anuncios.email}}</td>
+                    <td>{{anuncios.data}}</td>
                     <td><a href="#"><span class="label label-success"><i class="fa-solid fa-pencil"></i> Alterar</span></a></td>
-                    <td><a href="{{url_for('excluir_user',id=users.id)}}"><span class="label label-danger"><i class="fa-solid fa-eraser"></i> Excluir</span></a></td>
+                    <td><a href="{{url_for('excluir_anuncio',id=anuncio.id)}}"><span class="label label-danger"><i class="fa-solid fa-eraser"></i> Excluir</span></a></td>
                   </tr>
                 {% endfor %}
                
                            
               </tbody>
           </table>
-          <a href="{{url_for('cad_user')}}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Inserir usuarios</a>
+          <a href="{{url_for('cad_anuncio')}}" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Inserir Anúncios</a>
        </div>      
     </div>        
   </div>
