--- a/AdCenter2/app/views/base_sistema.html
+++ b/AdCenter2/app/views/base_sistema.html
@@ -102,13 +102,13 @@
             </li>
             
             <li>
-              <a href="{{url_for('inicio')}}">
+              <a href="{{url_for('cad_anuncio')}}">
                 <i class="fa-solid fa-layer-group"></i> <span>Cadastro Anúncios</span>
               </a>
             </li>
 
             <li>
-              <a href="{{url_for('admin')}}">
+              <a href="{{url_for('cad_admin')}}">
                 <i class="fa-solid fa-user-tie"></i> <span>Cadastro Administradores</span>
               </a>
             </li>
